chore: remove JcefDemo and associated Gradle task